feat(test) : test 팀 디테일에 맞게 변경